2004-07-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/tkfbox.tcl (::tk::dialog::file::Create): Watch out for
	users destroying the dialog indirectly. [Bug 987169] 

2004-07-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/canvas.n: Add paragraph to make clearer what is going on
	with the default canvas origin. [Bug 956681]

2004-07-05  George Peter Staplin <GeorgePS@XMission.com>

	* generic/tkEvent.c: TK_XIM_SPOT preprocessor usage was modified
	slightly to fix a bug that occured when TK_XIM_SPOT was defined as
	0.  Thanks to Joe Mistachkin for reporting this bug.

2004-07-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	TIP#158 IMPLEMENTATION

	* tests/bind.test:		   Allow Win apps to distinguish keys
	* win/tkWinX.c (GetState):	   on the keypad using the Extended
	* generic/tkInt.h (EXTENDED_MASK): modifier.  Thanks to Wolfgang
	* generic/tkBind.c:		   Grossbauer and Kevin Kenny for
	* doc/bind.n:			   developing this patch [Patch 797404]

2004-07-05  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c: Set _NET_WM_NAME and _NET_WM_ICON_NAME
	(freedesktop.org) in addition to WM_NAME and WM_ICON_NAME 
	(ICCCM).  This allows the full Unicode character set
	to be used in window manager strings (but only for
	newer WMs that support the EWMH spec).  [Tk Bug #959973]

2004-07-02  George Peter Staplin <GeorgePS@XMission.com>

	* generic/tkEvent.c: Tk_HandleEvent was refactored to be more
	readable, and during this process two bugs were found.  
	1) Button 4 and 5 masks will now be synchronized with the
	 TkDisplay.
	2) ClientMessage handlers will use the proper last pointer rather
	 than writing to the last GenericHandler pointer.

	Thanks to Joe English for his help and encouragement, and DKF for
	review.

2004-07-01  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/place.n, doc/pack.n: Doc fixes. [Tcl Bug 983146]

2004-06-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	TIP#153 IMPLEMENTATION
